--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "Smart Door System",
   "short_name": "SDS",
   "description": "Control your Smart Door System from anywhere.",
-  "start_url": "index.html",
+  "start_url": "smart-door-system
+/index.html",
   "display": "standalone",
   "background_color": "#2c2c2c",
   "theme_color": "#2c2c2c",
@@ -14,3 +15,4 @@
     }
   ]
 }
+
